# IDA-RPC

./: .gitignore  CMakeLists.txt  ida-plugin.json  readme.md
cmake/: fetch_discord_rpc.cmake
src/: discord_rpc_helper.cpp  discord_rpc_helper.hpp  helper.cpp  helper.hpp  ida_helper.cpp  ida_helper.hpp  plugin.cpp  plugin_mod.cpp  plugin_mod.hpp
src/discord/: rich_presence.cpp  rich_presence.hpp
src/listener/: idb_listener.cpp  idb_listener.hpp  ui_listener.cpp  ui_listener.hpp  view_listener.cpp  view_listener.hpp
src/log/: log.cpp  log.hpp  log_level.cpp  log_level.hpp
